# ccr

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ccr-review.yml
promo/: geeknews.md  hackernews.md  reddit.md
src/ccr/: __init__.py  backends.py  cli.py  hcca.py  models.py  prompts.py  reviewer.py
tests/: demo_target.py  sample.py
